--- a/lib/CL/devices/cuda/CMakeLists.txt
+++ b/lib/CL/devices/cuda/CMakeLists.txt
@@ -29,17 +29,34 @@ message(STATUS "CUDA_TOOLKIT_ROOT_DIR = ${CUDA_TOOLKIT_ROOT_DIR}")
 # this is required, because we're compiling the C++ files of this directory
 # with LLVM-provided flags, which usually contain their own setting of
 # C++ standard, which may be in conflict with pocl's default C++ standard.
-unset(CMAKE_CXX_STANDARD)
-unset(CMAKE_CXX_STANDARD_REQUIRED)
-set_source_files_properties(pocl-ptx-gen.cc pocl-ptx-gen.h PROPERTIES COMPILE_FLAGS "${LLVM_CXXFLAGS}")
+#unset(CMAKE_CXX_STANDARD)
+#unset(CMAKE_CXX_STANDARD_REQUIRED)
+
+find_package(LLVM REQUIRED CONFIG)
+# message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+# message(STATUS "LLVM include dirs: ${LLVM_INCLUDE_DIRS}")
+# message(STATUS "LLVM compile defs: ${LLVM_DEFINITIONS}")
+#set_source_files_properties(pocl-ptx-gen.cc pocl-ptx-gen.h PROPERTIES COMPILE_FLAGS "${LLVM_CXXFLAGS}")
+# TODO: We should ignore llvm-config on Windows since it is built to give the flags we want for Linux, not Windows
 include_directories(${LLVM_INCLUDE_DIRS} ${CUDA_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/../../../llvmopencl)
-set(CMAKE_CXX_STANDARD ${POCL_CMAKE_CXX_STANDARD})
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
+#set(CMAKE_CXX_STANDARD ${POCL_CMAKE_CXX_STANDARD})
+#set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+
 
 add_pocl_device_library("pocl-devices-cuda" pocl-cuda.c pocl-cuda.h pocl-ptx-gen.cc pocl-ptx-gen.h)
+
+target_compile_definitions("pocl-devices-cuda" PRIVATE ${LLVM_DEFINITIONS})
 target_compile_definitions("pocl-devices-cuda" PRIVATE "-DCUDA_TOOLKIT_ROOT_DIR=\"${CUDA_TOOLKIT_ROOT_DIR}\"")
+
 if(ENABLE_LOADABLE_DRIVERS)
-  target_link_libraries(pocl-devices-cuda PRIVATE ${CUDA_POCL_TARGETS} ${CLANG_LINK_LIBRARIES} ${LLVM_LINK_LIBRARIES} ${PTHREAD_LIBRARY})
+  target_link_libraries(pocl-devices-cuda PRIVATE
+	${CUDA_POCL_TARGETS}
+	${CLANG_LINK_LIBRARIES}
+	${LLVM_LINK_LIBRARIES}
+	${LLVM_LIBRARIES}
+	${PTHREAD_LIBRARY}
+	)
   target_link_directories(pocl-devices-cuda PRIVATE ${CLANG_LINK_DIRECTORIES} ${LLVM_LINK_DIRECTORIES})
 endif()
 
